RESOLVED FIXED150418
WebContextMenuProxyMac::setupServicesMenu doesn't need to take a context parameter
https://bugs.webkit.org/show_bug.cgi?id=150418
Summary WebContextMenuProxyMac::setupServicesMenu doesn't need to take a context para...
Anders Carlsson
Reported 2015-10-21 14:55:20 PDT
WebContextMenuProxyMac::setupServicesMenu doesn't need to take a context parameter
Attachments
Patch (4.45 KB, patch)
2015-10-21 14:55 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-10-21 14:55:33 PDT
Anders Carlsson
Comment 2 2015-10-21 15:17:50 PDT
Note You need to log in before you can comment on or make changes to this bug.