WebContextMenuProxyMac::setupServicesMenu doesn't need to take a context parameter https://bugs.webkit.org/show_bug.cgi?id=150418

Reviewed by Tim Horton.

* UIProcess/mac/WebContextMenuProxyMac.h:
* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::setupServicesMenu):
(WebKit::WebContextMenuProxyMac::populate):

Canonical link: https://commits.webkit.org/168571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191407 268f45cc-cd09-0410-ab3c-d52691b4dbfc